      * Working camera widget with datatype DT_VideoMjpeg in 0.4.
      * Sensor with unit in degrees now display an arrow with the value as angle.
      * Add font-awesome for future usage.
      * #38 Weather plugin sunrise/sunset and update date translate.
      * #25 Icon for new motion sensor/command.
      * Numbers are internationalised.
      * Close #86 utf8 issue in DomodroidDB.java.
      * Close #85 Room ID when sync is false if saved one.
      * Close #84 Automated build on Travis-CI.
      * Close #83 Add license information.
      * Close #81 last room id in db when syncing.
      * Close #80 Adding a widget from house menu.
      * Close #79 Move widget up or down.
      * Close #77 Device ID for debugging is no more displayed.
      * Close #76 House organisation not saved.
      * Close #75 Organize area Usage by user choice at sync.
      * Close #68 Select new image for map with uri.
      * Close #33 refresh widget at root.
      * #38 More Ru and Fr translation from transifex.
      * #38 weather condtion codes translate to brasilian.
      % Version 15
      _ 2016-01-31
      * Problem when publishing to the store
      % Version 14
      _ 2016-01-31
      ! Important due to new method for Domogik 0.4+ command, it's strongly recommended to synchronize again with Domogik.
      * #75 Add an option for 0.4+ to order default area by device name, device type or by plugin.
      * #70 Close new Db method that delete widget if device didn't exist after a new sync (avoid filling db with past data).
      * #34 new sync method that avoid to loose house organisation.
      * #34 new sync method that deleting only area (Usage/Device). At least at the 2nd next sync.
      * Add multiple parameters for 0.4+ command (need a resync).
      * #69 Widget command with multiple parameters.
      * #68 Android > KitKat image picker method change.
      * #35 Add icon for weather condition code.
      * Add color picker RGB for 0.4+ command.