@@ -17,25 +17,23 @@
  */
 package widgets;
 
-import Entity.Entity_Feature;
-import Entity.Entity_Map;
-import Entity.Entity_client;
-import activities.Activity_Cam;
-
 import android.app.Activity;
 import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
 import android.os.Bundle;
-
-import database.WidgetUpdate;
-import misc.tracerengine;
-
 import android.os.Handler;
 import android.os.Message;
 import android.view.View;
 import android.view.View.OnClickListener;
 import android.widget.FrameLayout;
+
+import Entity.Entity_Feature;
+import Entity.Entity_Map;
+import Entity.Entity_client;
+import activities.Activity_Cam;
+import database.WidgetUpdate;
+import misc.tracerengine;
 
 public class Graphical_Cam extends Basic_Graphical_widget implements OnClickListener {
 
@@ -55,7 +53,7 @@ public class Graphical_Cam extends Basic_Graphical_widget implements OnClickList
     public Graphical_Cam(tracerengine Trac,
                          final Activity context, String url, int widgetSize, int session_type, int place_id, String place_type, SharedPreferences params,
                          final Entity_Feature feature, Handler handler) {
-        super(params,context, Trac, feature.getId(), feature.getDescription(), feature.getState_key(), feature.getIcon_name(), widgetSize, place_id, place_type, mytag, container, handler);
+        super(params, context, Trac, feature.getId(), feature.getDescription(), feature.getState_key(), feature.getIcon_name(), widgetSize, place_id, place_type, mytag, container, handler);
         this.feature = feature;
         this.Tracer = Trac;
         this.context = context;
@@ -67,7 +65,7 @@ public class Graphical_Cam extends Basic_Graphical_widget implements OnClickList
     public Graphical_Cam(tracerengine Trac,
                          final Activity context, String url, int widgetSize, int session_type, int place_id, String place_type, SharedPreferences params,
                          final Entity_Map feature_map, Handler handler) {
-        super(params,context, Trac, feature_map.getId(), feature_map.getDescription(), feature_map.getState_key(), feature_map.getIcon_name(), widgetSize, place_id, place_type, mytag, container, handler);
+        super(params, context, Trac, feature_map.getId(), feature_map.getDescription(), feature_map.getState_key(), feature_map.getIcon_name(), widgetSize, place_id, place_type, mytag, container, handler);
         this.feature = feature_map;
         this.Tracer = Trac;
         this.context = context;
@@ -148,7 +146,7 @@ public class Graphical_Cam extends Basic_Graphical_widget implements OnClickList
     }
 
     public void onClick(View v) {
-        if (url.equals("Mjpeg video url"))
+        if (url.equals("Mjpeg video url") || url.equals("Virtual Video"))
             url = session.getValue();
         if (!url.equals(null)) {
             Intent intent = new Intent(context, Activity_Cam.class);
